# pkg-win

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
files/: genericCmakeFile.txt  genericConanfile.txt  genericMain.txt
include/: Builder.hpp  Project.hpp  Types.hpp  Workstation.hpp
src/: Builder.cpp  Project.cpp  Workstation.cpp  main.cpp
